fixed single question not showing in very small screen

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,9 +1,10 @@
 #singleQuestionContainer {
 	/*padding-bottom:50px;*/
 	top:50px;
+	
 	padding:20px;
 	background-color: #EAEAEA;
-	height:100%;
+	/*height:100%;*/
 	width:100%;
 	overflow-y: scroll;
 	position: fixed;
@@ -22,7 +23,7 @@
 	top:50px;
 	padding:20px;
 	background-color: #EAEAEA;
-	height:100%;
+	/*height:100%;*/
 	width:100%;
 	overflow-y: scroll;
 	position: fixed;
